--- a/src/app/shared/components/input-footer/input-footer.component.scss
+++ b/src/app/shared/components/input-footer/input-footer.component.scss
@@ -2,16 +2,15 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-top: var(--space-2);
 }
 
 .input-char-count {
-  font-size: var(--font-size-sm);
+  font-size: var(--font-size-xs);
   color: var(--color-text-muted);
 }
 
 .input-helper-text {
-  font-size: var(--font-size-sm);
+  font-size: var(--font-size-xs);
   color: var(--color-text-muted);
 
   &--error {
