--- a/src/app/shared/components/input/input.component.html
+++ b/src/app/shared/components/input/input.component.html
@@ -27,6 +27,7 @@
       [type]="type()"
       [class]="inputClasses()"
       [value]="internalValue()"
+      [name]="name()"
       [placeholder]="placeholder()"
       [disabled]="disabled()"
       [readonly]="readonly()"
