--- a/src/app/shared/components/textarea/textarea.component.html
+++ b/src/app/shared/components/textarea/textarea.component.html
@@ -20,6 +20,7 @@
       #textareaElement
       [class]="textareaClasses()"
       [value]="internalValue()"
+      [name]="name()"
       [placeholder]="placeholder()"
       [disabled]="disabled()"
       [readonly]="readonly()"
