--- a/src/app/features/profile/components/profile-stats-card/profile-stats-card.component.html
+++ b/src/app/features/profile/components/profile-stats-card/profile-stats-card.component.html
@@ -1,5 +1,5 @@
 <ng-container *transloco="let t">
-  <eb-card class="stats-card">
+  <eb-card class="stats-card" [hoverable]="false">
     <div card-body>
       @if (isLoading()) {
         <!-- Loading State -->
