fix(security): add honeypot to contact form, security docs

--- a/src/app/features/contact/contact.component.html
+++ b/src/app/features/contact/contact.component.html
@@ -99,6 +99,10 @@
                 </div>
               }
 
+              <eb-form-field class="visually-hidden">
+                <input type="text" formControlName="_gotcha" tabindex="-1" autocomplete="off" />
+              </eb-form-field>
+
               <span
                 [ebTooltip]="t('contact.form.tooltipInvalid')"
                 tooltipPosition="top"
