refactor(forms): improve shared forms, storybooks

--- a/src/app/shared/components/input/input.component.html
+++ b/src/app/shared/components/input/input.component.html
@@ -9,7 +9,7 @@
     >
       {{ label() }}
       @if (required()) {
-        <span class="input-label__required" aria-label="required" role="alert">*</span>
+        <span class="input-label__required" aria-hidden="true">*</span>
       }
     </label>
   }
